# parallel_biqbin_maxcut

./: .editorconfig  .gitignore  CMakeLists.txt  pyproject.toml
src/: wrapper.cpp
