[project]
name = "parallel_biqbin_maxcut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Theauthor", email = "theauthor@email.com" }
]
requires-python = ">=3.8"
dependencies = [
    "scipy",
    "numpy",
    "dwave-neal"
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"
